--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
   "installCommand": "npm install",
   "devCommand": "npm run dev",
   "env": {
-    "NEXT_PUBLIC_SOLANA_NETWORK": "devnet",
-    "NEXT_PUBLIC_RPC_URL": "https://api.devnet.solana.com",
+    "NEXT_PUBLIC_SOLANA_NETWORK": "mainnet",
+    "NEXT_PUBLIC_RPC_URL": "https://api.mainnet-beta.solana.com",
     "NEXT_PUBLIC_APP_NAME": "Klio.fun",
     "NEXT_PUBLIC_APP_DESCRIPTION": "Decentralized Prediction Markets on Solana"
   },
