--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_SOLANA_NETWORK=mainnet
 NEXT_PUBLIC_RPC_URL=https://api.mainnet-beta.solana.com
+NEXT_PUBLIC_PROGRAM_ID=2e6hieA8oZeoBQeJyUku9cELTeWk11ReJwMhWcSWpump
 NEXT_PUBLIC_APP_NAME=Klio.fun
 NEXT_PUBLIC_APP_DESCRIPTION=Decentralized Prediction Markets on Solana
