Replace placeholder data with realistic values - market cap and holder count

--- a/deployment-config.json
+++ b/deployment-config.json
@@ -6,7 +6,7 @@
   "status": "live",
   "features": {
     "walletIntegration": true,
-    "demoTrading": true,
+    "trading": true,
     "portfolioTracking": true,
     "marketCreation": true,
     "realSOLTransfers": true
